syntax = "proto3";

package go.micro.api.password_manager;

message PasswordEntry {
    string domain = 1;
    string username = 2;
    string password = 3;
    int64 date = 4;
    bool deleted = 5;
}

message UpdatePasswordRequest {
    string domain = 2;
    string username = 3;
    string password = 4;
    int64 date = 5;
    bool deleted = 6;
}

message ListPasswordRequest {
    int64 date = 1;
}

message ListPasswordResponse {
    repeated PasswordEntry passwords = 1;
}

message Empty {}

service PasswordManager {
    rpc UpdatePassword(UpdatePasswordRequest) returns (Empty) {}
    rpc ListPasswords(ListPasswordRequest) returns (ListPasswordResponse) {}
}
